Remove XMLBeans, replace with JAXB